syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc GetUserProfile (GetUserRequest) returns (UserProfileResponse);
}

message GetUserRequest {
  string userId = 1;
}

message UpdateUserRequest {
  string userId = 1;
  string name = 2;
  string bio = 3;
  UserPreferences preferences = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string bio = 4;
  UserPreferences preferences = 5;
  string createdAt = 6;
}

message UserProfileResponse {
  bool success = 1;
  User user = 2;
  int32 todoCount = 3;
}

message UserPreferences {
  string theme = 1;
  bool notifications = 2;
}